<?xml version="1.0"?>
<package>
  <name>microtrac_control</name>
  <version>0.0.0</version>
  <description>The microtrac control package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
