<?xml version="1.0"?>
<package>
  <name>microtractor_navigation</name>
  <version>0.0.0</version>
  <description>The microtractor navigation package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
