<?xml version="1.0"?>
<package>
  <name>microtrac_navigation</name>
  <version>0.0.0</version>
  <description>The microtrac navigation package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
