<?xml version="1.0"?>
<package>
  <name>microtractor_description</name>
  <version>0.0.0</version>
  <description>The microtractor_description package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>
  <author email="ian@ianthe.engineer">Ian McMahon</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

</package>
