<?xml version="1.0"?>
<package>
  <name>microtractor_robot</name>
  <version>0.0.0</version>
  <description>The microtractor robot meta package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>
  <author email="ian@ianthe.engineer">Ian McMahon</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>microtractor_description</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
